--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -16,6 +16,7 @@
 {{#if userInSession}}
   <h2>Welcome, {{ userInSession.username }}!</h2>
   <p>This is your profile page my friend!</p>
+  <img src="{{userInSession.imgUrl}}" alt="you">
   <button>
     <a href="/userProfile">Reload the page</a>
   </button>
